# adk-lab

./: .env.example  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
MarginCall/: .env  main.py  project.yaml
MarginCall/margincall_analyst/: __init__.py  agent.py
MarginCall/margincall_analyst/sub_agents/: __init__.py
MarginCall/tools/: config.py  runner_utils.py  schemas.py
adk_lab/: __init__.py  adk_helpers.py  utilities.py
agent_forge/: DailyBriefing.yaml  IncidentCommander.yaml  MarginCall.yaml  MarketDashboard.yaml  PolicyRefiner.yaml  RecruitingDesk.yaml  ReleasePipeline.yaml  RunbookStudio.yaml  SpendApproval.yaml  agent_forge.py  requirements.txt
agent_forge/src/: check_env.py  main.py
agent_forge/src/tools/: config.py  logging_utils.py  runner_utils.py
agentic_patterns/: README.md  requirements.txt
agentic_patterns/exception_handling/.adk/: session.db
agentic_patterns/exception_handling/robust_location_agent/: agent.py  exception_handling.db  location.py
agentic_patterns/function_calling/.adk/: session.db
agentic_patterns/function_calling/current_time_agent/: agent.py
agentic_patterns/function_calling/search_agent/: agent.py
agentic_patterns/multi_agent/travel_agent/: .env  README.md  check_env.py  main.py
agents/MarginCall/: .env  check_env.py
agents/MarginCall/stock_analyst/: agent.py
agents/MarginCall/tools/: __init__.py  fetch_financials.py  fetch_stock_price.py  fetch_technical_indicators.py
devops_tools/: devops_tools_data.db  main.py
devops_tools/common/: __init__.py  adk_helpers.py  logging_utils.py  utilities.py
devops_tools/common/.adk/: session.db
devops_tools/log_analyzer/: README.md  agent.py  runner_agent.py
devops_tools/log_analyzer/.adk/: session.db
devops_tools/restart_server/: agent.py
devops_tools/restart_server/.adk/: session.db
devops_tools/restart_server_agent/: agent.py
devops_tools/restart_server_agent/.adk/: session.db
misc/pydantic_lab/: BlogPost.py  BlogPostFieldValidator.py  BlogPostModelValidator.py  User.py
(+37 files in other folders)
