[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-lab"
version = "0.1.0"
description = "Reusable utilities and helpers for Google ADK agent development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.21.0",
    "click>=8.1.8,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# We only care about the most basic syntax errors (F) and Import sorting (I)
# Removing 'E' (Style) and 'W' (Warnings) to reduce noise
select = ["F", "I"] 
ignore = ["F401"] # Ignore unused imports so labs don't fail

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
