[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-lab"
version = "0.1.0"
description = "Reusable utilities and helpers for Google ADK agent development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.21.0",
    "click>=8.1.8,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Target version for your .agentic_venv
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E/W: PEP8, F: Pyflakes, I: Import sorting
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
# Treat these as internal modules so imports are grouped correctly
known-first-party = ["agentic_patterns", "devops_tools", "tools", "supervisor_guard"]

[tool.ruff.format]
quote-style = "double"
